--- a/index.html
+++ b/index.html
@@ -343,6 +343,8 @@
         .project-card:nth-child(5) { animation-delay: 0.5s; }
         .project-card:nth-child(6) { animation-delay: 0.6s; }
         .project-card:nth-child(7) { animation-delay: 0.7s; }
+        .project-card:nth-child(8) { animation-delay: 0.8s; }
+        .project-card:nth-child(9) { animation-delay: 0.9s; }
 
         .project-card:hover {
             transform: translateY(-10px) rotateX(5deg);
@@ -844,12 +846,73 @@
     <section id="projets">
         <h2 class="section-title">PROJETS</h2>
         <div class="projects-grid">
+            
+            <div class="project-card">
+                <span class="project-category">Réseaux • Dépannage WiFi</span>
+                <h3 class="project-title">Troubleshooting WLAN - Réseau domestique et entreprise</h3>
+                <p class="project-desc">Dépannage complet de réseaux sans fil dans deux environnements : domestique (mode PSK) et entreprise (802.1X). Correction de configurations DNS/DHCP sur routeur domestique, activation de VLAN sur WLC, résolution de problèmes d'authentification et de connectivité. Mise en pratique des méthodes de diagnostic systématique.</p>
+                <div class="project-links">
+                    <a href="documents/TP5_troubleshoot-wlan-issues.pdf" target="_blank" download class="project-link primary">Voir le rapport PDF</a>
+                </div>
+                <div class="project-tags">
+                    <span class="tag">WiFi</span>
+                    <span class="tag">WLC</span>
+                    <span class="tag">DHCP/DNS</span>
+                    <span class="tag">802.1X</span>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <span class="project-category">Réseaux • ADSL/Cable Modem</span>
+                <h3 class="project-title">Architecture réseau ADSL et Cable Modem</h3>
+                <p class="project-desc">Mise en place d'une infrastructure permettant la communication entre deux réseaux clients connectés via des technologies différentes (ADSL et modem câble). Configuration de routeurs Cisco, serveurs DHCP/DNS, et points d'accès WiFi. Intégration de serveurs web Apache avec résolution de noms de domaine.</p>
+                <div class="project-links">
+                    <a href="documents/GRONDIN-Benjamin-TP5.pdf" target="_blank" download class="project-link primary">Voir le rapport PDF</a>
+                </div>
+                <div class="project-tags">
+                    <span class="tag">ADSL</span>
+                    <span class="tag">Cable Modem</span>
+                    <span class="tag">Cisco</span>
+                    <span class="tag">WiFi</span>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <span class="project-category">Infrastructure • DNS</span>
+                <h3 class="project-title">Configuration DNS Primaire/Secondaire</h3>
+                <p class="project-desc">Mise en place d'une architecture DNS haute disponibilité avec BIND9. Configuration de zones directe et inverse, transfert de zone automatique entre serveur primaire et secondaire. Intégration d'un serveur web Apache avec résolution de noms de domaine.</p>
+                <div class="project-links">
+                    <a href="documents/GRONDIN-Benjamin-TP1-R303.pdf" target="_blank" download class="project-link primary">Voir le rapport PDF</a>
+                </div>
+                <div class="project-tags">
+                    <span class="tag">BIND9</span>
+                    <span class="tag">DNS</span>
+                    <span class="tag">Apache</span>
+                    <span class="tag">Linux</span>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <span class="project-category">Sécurité • Load Balancing</span>
+                <h3 class="project-title">HAProxy - Équilibrage de charge sécurisé</h3>
+                <p class="project-desc">Infrastructure haute disponibilité avec HAProxy pour la répartition de charge entre deux serveurs Apache. Configuration HTTPS/TLS avec certificats auto-signés, redirection automatique HTTP vers HTTPS, persistance de session via cookies et monitoring en temps réel. Tests de basculement et analyse du handshake TLS avec Wireshark.</p>
+                <div class="project-links">
+                    <a href="documents/R4-Cyber-11_-Sécurisation-de-services-réseaux-Haproxy-GRONDIN-Benjamin-BUT-2-TP1-2025.pdf" target="_blank" download class="project-link primary">Voir le rapport PDF</a>
+                </div>
+                <div class="project-tags">
+                    <span class="tag">HAProxy</span>
+                    <span class="tag">HTTPS/TLS</span>
+                    <span class="tag">Apache</span>
+                    <span class="tag">Load Balancing</span>
+                </div>
+            </div>
+
             <div class="project-card">
                 <span class="project-category">Réseaux • Protocoles</span>
                 <h3 class="project-title">Analyse de Protocoles Réseaux</h3>
                 <p class="project-desc">Étude approfondie des protocoles réseau (TCP/IP, UDP, HTTP, DNS) avec analyse de trames et capture de paquets. Mise en pratique de Wireshark pour l'analyse du trafic réseau et compréhension des mécanismes de communication.</p>
                 <div class="project-links">
-                    <a href="documents/rapports/analyse-protocoles.pdf" target="_blank" class="project-link primary">Voir le rapport PDF</a>
+                    <a href="documents/rapports/analyse-protocoles.pdf" target="_blank" download class="project-link primary">Voir le rapport PDF</a>
                     <a href="https://github.com/Benjamin-Grondin-21/Portfolio" target="_blank" class="project-link">Code source</a>
                 </div>
                 <div class="project-tags">
@@ -864,7 +927,7 @@
                 <h3 class="project-title">Monitoring conteneurs</h3>
                 <p class="project-desc">Système de surveillance d'infrastructure avec Grafana, Prometheus et intégration Discord pour le monitoring des installations TAAF. Mise en place de dashboards et alertes automatiques pour garantir la disponibilité des services.</p>
                 <div class="project-links">
-                    <a href="documents/rapports/monitoring-conteneurs.pdf" target="_blank" class="project-link primary">Voir le rapport PDF</a>
+                    <a href="documents/rapports/monitoring-conteneurs.pdf" target="_blank" download class="project-link primary">Voir le rapport PDF</a>
                     <a href="https://github.com/Benjamin-Grondin-21" target="_blank" class="project-link">Documentation</a>
                 </div>
                 <div class="project-tags">
@@ -890,41 +953,11 @@
             </div>
 
             <div class="project-card">
-                <span class="project-category">Infrastructure • DNS</span>
-                <h3 class="project-title">Configuration DNS Primaire/Secondaire</h3>
-                <p class="project-desc">Mise en place d'une architecture DNS haute disponibilité avec BIND9. Configuration de zones directe et inverse, transfert de zone automatique entre serveur primaire et secondaire. Intégration d'un serveur web Apache avec résolution de noms de domaine.</p>
-                <div class="project-links">
-                    <a href="documents/GRONDIN-Benjamin-TP1-R303.pdf" target="_blank" class="project-link primary">Voir le rapport PDF</a>
-                </div>
-                <div class="project-tags">
-                    <span class="tag">BIND9</span>
-                    <span class="tag">DNS</span>
-                    <span class="tag">Apache</span>
-                    <span class="tag">Linux</span>
-                </div>
-            </div>
-
-            <div class="project-card">
-                <span class="project-category">Sécurité • Load Balancing</span>
-                <h3 class="project-title">HAProxy - Équilibrage de charge sécurisé</h3>
-                <p class="project-desc">Infrastructure haute disponibilité avec HAProxy pour la répartition de charge entre deux serveurs Apache. Configuration HTTPS/TLS avec certificats auto-signés, redirection automatique HTTP vers HTTPS, persistance de session via cookies et monitoring en temps réel. Tests de basculement et analyse du handshake TLS avec Wireshark.</p>
-                <div class="project-links">
-                    <a href="documents/R4-Cyber-11_-Sécurisation-de-services-réseaux-Haproxy-GRONDIN-Benjamin-BUT-2-TP1-2025.pdf" target="_blank" class="project-link primary">Voir le rapport PDF</a>
-                </div>
-                <div class="project-tags">
-                    <span class="tag">HAProxy</span>
-                    <span class="tag">HTTPS/TLS</span>
-                    <span class="tag">Apache</span>
-                    <span class="tag">Load Balancing</span>
-                </div>
-            </div>
-
-            <div class="project-card">
                 <span class="project-category">Data Analysis • Monitoring</span>
                 <h3 class="project-title">Analyse de logs</h3>
                 <p class="project-desc">Système d'analyse avancée avec PromQL pour le monitoring CPU/mémoire et intégration Loki pour l'analyse de logs. Création de requêtes complexes et de dashboards pour le suivi en temps réel des performances système.</p>
                 <div class="project-links">
-                    <a href="documents/rapports/analyse-logs.pdf" target="_blank" class="project-link primary">Voir le rapport PDF</a>
+                    <a href="documents/rapports/analyse-logs.pdf" target="_blank" download class="project-link primary">Voir le rapport PDF</a>
                 </div>
                 <div class="project-tags">
                     <span class="tag">PromQL</span>
@@ -938,7 +971,7 @@
                 <h3 class="project-title">Exploitation Réseaux Mobile</h3>
                 <p class="project-desc">Expérience professionnelle en alternance chez Orange Réunion Mayotte. Participation à l'exploitation et à la maintenance des réseaux mobiles, supervision des infrastructures, résolution d'incidents et optimisation des performances réseau.</p>
                 <div class="project-links">
-                    <a href="documents/alternance/rapport-alternance-orange.pdf" target="_blank" class="project-link primary">Rapport d'alternance</a>
+                    <a href="documents/alternance/rapport-alternance-orange.pdf" target="_blank" download class="project-link primary">Rapport d'alternance</a>
                 </div>
                 <div class="project-tags">
                     <span class="tag">Réseaux Mobile</span>
@@ -981,6 +1014,10 @@
                 <div class="skill-level">VirtualBox • Packet Tracer • Windows Server • Active Directory</div>
             </div>
             <div class="skill-item">
+                <div class="skill-name">WiFi & Sécurité Sans Fil</div>
+                <div class="skill-level">WLC Cisco • Dépannage WLAN • 802.1X • WPA2-PSK • Points d'accès • Troubleshooting</div>
+            </div>
+            <div class="skill-item">
                 <div class="skill-name">Support & Infrastructure</div>
                 <div class="skill-level">Dépannage • Diagnostic • Assistance utilisateurs (N1/N2) • Brassage réseau</div>
             </div>
@@ -988,7 +1025,7 @@
                 <div class="skill-name">Électronique & Systèmes</div>
                 <div class="skill-level">Arduino • Installation électrique • Systèmes communicants</div>
             </div>
-        </div>
+        </skills-container>
     </section>
 
     <section id="contact">
