--- a/index.html
+++ b/index.html
@@ -340,11 +340,6 @@
         .project-card:nth-child(2) { animation-delay: 0.2s; }
         .project-card:nth-child(3) { animation-delay: 0.3s; }
         .project-card:nth-child(4) { animation-delay: 0.4s; }
-        .project-card:nth-child(5) { animation-delay: 0.5s; }
-        .project-card:nth-child(6) { animation-delay: 0.6s; }
-        .project-card:nth-child(7) { animation-delay: 0.7s; }
-        .project-card:nth-child(8) { animation-delay: 0.8s; }
-        .project-card:nth-child(9) { animation-delay: 0.9s; }
 
         .project-card:hover {
             transform: translateY(-10px) rotateX(5deg);
@@ -770,7 +765,7 @@
         
         <div class="hero-stats">
             <div class="stat-item">
-                <div class="stat-number">4+</div>
+                <div class="stat-number">4</div>
                 <div class="stat-label">Projets</div>
             </div>
             <div class="stat-item">
@@ -784,10 +779,10 @@
         </div>
 
         <div class="hero-tags">
-            <div class="hero-tag">Développement Web</div>
-            <div class="hero-tag">Protocoles Réseaux</div>
-            <div class="hero-tag">Monitoring</div>
-            <div class="hero-tag">4G/5G</div>
+            <div class="hero-tag">Réseaux</div>
+            <div class="hero-tag">DNS</div>
+            <div class="hero-tag">Sécurité</div>
+            <div class="hero-tag">WiFi</div>
         </div>
 
         <a href="#projets" class="cta-button">DÉCOUVRIR MES PROJETS</a>
@@ -907,78 +902,6 @@
                 </div>
             </div>
 
-            <div class="project-card">
-                <span class="project-category">Réseaux • Protocoles</span>
-                <h3 class="project-title">Analyse de Protocoles Réseaux</h3>
-                <p class="project-desc">Étude approfondie des protocoles réseau (TCP/IP, UDP, HTTP, DNS) avec analyse de trames et capture de paquets. Mise en pratique de Wireshark pour l'analyse du trafic réseau et compréhension des mécanismes de communication.</p>
-                <div class="project-links">
-                    <a href="documents/rapports/analyse-protocoles.pdf" target="_blank" class="project-link primary">Voir le rapport PDF</a>
-                    <a href="https://github.com/Benjamin-Grondin-21/Portfolio" target="_blank" class="project-link">Code source</a>
-                </div>
-                <div class="project-tags">
-                    <span class="tag">TCP/IP</span>
-                    <span class="tag">Wireshark</span>
-                    <span class="tag">Protocoles</span>
-                </div>
-            </div>
-
-            <div class="project-card">
-                <span class="project-category">Infrastructure • DevOps</span>
-                <h3 class="project-title">Monitoring conteneurs</h3>
-                <p class="project-desc">Système de surveillance d'infrastructure avec Grafana, Prometheus et intégration Discord pour le monitoring des installations TAAF. Mise en place de dashboards et alertes automatiques pour garantir la disponibilité des services.</p>
-                <div class="project-links">
-                    <a href="documents/rapports/monitoring-conteneurs.pdf" target="_blank" class="project-link primary">Voir le rapport PDF</a>
-                    <a href="https://github.com/Benjamin-Grondin-21" target="_blank" class="project-link">Documentation</a>
-                </div>
-                <div class="project-tags">
-                    <span class="tag">Grafana</span>
-                    <span class="tag">Prometheus</span>
-                    <span class="tag">PostgreSQL</span>
-                </div>
-            </div>
-
-            <div class="project-card">
-                <span class="project-category">Développement Web • Design</span>
-                <h3 class="project-title">Portfolio Web</h3>
-                <p class="project-desc">Site portfolio moderne avec design brutalist-minimal, animations 3D et effets de curseur personnalisés. Développé en HTML/CSS/JavaScript pur avec une attention particulière portée à l'expérience utilisateur et au responsive design.</p>
-                <div class="project-links">
-                    <a href="https://benjamin-grondin-21.github.io/Portfolio/" target="_blank" class="project-link primary">Voir le site</a>
-                    <a href="https://github.com/Benjamin-Grondin-21/Portfolio" target="_blank" class="project-link">Code GitHub</a>
-                </div>
-                <div class="project-tags">
-                    <span class="tag">HTML/CSS</span>
-                    <span class="tag">JavaScript</span>
-                    <span class="tag">Design</span>
-                </div>
-            </div>
-
-            <div class="project-card">
-                <span class="project-category">Data Analysis • Monitoring</span>
-                <h3 class="project-title">Analyse de logs</h3>
-                <p class="project-desc">Système d'analyse avancée avec PromQL pour le monitoring CPU/mémoire et intégration Loki pour l'analyse de logs. Création de requêtes complexes et de dashboards pour le suivi en temps réel des performances système.</p>
-                <div class="project-links">
-                    <a href="documents/rapports/analyse-logs.pdf" target="_blank" class="project-link primary">Voir le rapport PDF</a>
-                </div>
-                <div class="project-tags">
-                    <span class="tag">PromQL</span>
-                    <span class="tag">Loki</span>
-                    <span class="tag">Monitoring</span>
-                </div>
-            </div>
-
-            <div class="project-card">
-                <span class="project-category">Alternance • Orange</span>
-                <h3 class="project-title">Exploitation Réseaux Mobile</h3>
-                <p class="project-desc">Expérience professionnelle en alternance chez Orange Réunion Mayotte. Participation à l'exploitation et à la maintenance des réseaux mobiles, supervision des infrastructures, résolution d'incidents et optimisation des performances réseau.</p>
-                <div class="project-links">
-                    <a href="documents/alternance/rapport-alternance-orange.pdf" target="_blank" class="project-link primary">Rapport d'alternance</a>
-                </div>
-                <div class="project-tags">
-                    <span class="tag">Réseaux Mobile</span>
-                    <span class="tag">4G/5G</span>
-                    <span class="tag">Orange</span>
-                </div>
-            </div>
         </div>
     </section>
 
@@ -1021,11 +944,7 @@
                 <div class="skill-name">Support & Infrastructure</div>
                 <div class="skill-level">Dépannage • Diagnostic • Assistance utilisateurs (N1/N2) • Brassage réseau</div>
             </div>
-            <div class="skill-item">
-                <div class="skill-name">Électronique & Systèmes</div>
-                <div class="skill-level">Arduino • Installation électrique • Systèmes communicants</div>
-            </div>
-        </skills-container>
+        </div>
     </section>
 
     <section id="contact">
