--- a/index.html
+++ b/index.html
@@ -786,6 +786,7 @@
         </div>
 
         <a href="#projets" class="cta-button">DÉCOUVRIR MES PROJETS</a>
+        <a href="documents/CV-GRONDIN-Benjamin.pdf" target="_blank" class="cta-button" style="background: var(--primary); border-color: var(--primary); margin-left: 1rem;">TÉLÉCHARGER MON CV</a>
         <div class="scroll-indicator"></div>
     </header>
 
