--- a/index.html
+++ b/index.html
@@ -945,6 +945,20 @@
                 <div class="skill-name">Support & Infrastructure</div>
                 <div class="skill-level">Dépannage • Diagnostic • Assistance utilisateurs (N1/N2) • Brassage réseau</div>
             </div>
+            <div class="skill-item">
+    <div class="skill-name">Savoir-être & Soft Skills</div>
+    <div class="skill-level">Gestion du stress • Travail en équipe • Gestion de projet • Autonomie • Rigueur • Communication • Adaptabilité</div>
+</div>
+
+<div class="skill-item">
+    <div class="skill-name">Gestion de Projet</div>
+    <div class="skill-level">Planification • Respect des délais • Priorisation des tâches • Documentation technique • Méthodologie Agile</div>
+</div>
+
+<div class="skill-item">
+    <div class="skill-name">Qualités Professionnelles</div>
+    <div class="skill-level">Esprit d'analyse • Résolution de problèmes • Force de proposition • Curiosité technique • Apprentissage continu</div>
+</div>
         </div>
     </section>
 
