--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
                 <strong>Orange Réunion Mayotte</strong><br><br>
                 Étudiant BUT Réseaux & Télécommunications (3ème année)<br>
                 <strong>IUT de La Réunion</strong> • Titulaire BTS SIO SISR<br>
-                Passionné par le développement et les protocoles réseaux<br><br>
+                Passionné par les réseaux informartiques<br><br>
                 <a href="mailto:b.grondin@rt-iut.re">contact@benjamin-grondin.fr</a><br>
                 <a href="https://github.com/Benjamin-Grondin-21" target="_blank">GitHub</a> • 
                 <a href="https://www.linkedin.com/in/benjamin-grondin2103/" target="_blank">LinkedIn</a>
